List using JSON data

--- a/Dynamic-List/index.html
+++ b/Dynamic-List/index.html
@@ -7,12 +7,13 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" type="image/png" href="images/billy.png">
     <link rel="stylesheet" href="style.css">
-    <title>Template</title>
+    <title>Dynamic List Using JSON</title>
 </head>
 <body>
     <div class="main-container">
         <div class="container">
-            <h1>NimiraTech</h1>
+            <h1>80's Grand Prix Legends</h1>
+            <div class="output"></div>
         </div>
     </div>
     <script src="script.js"></script>
